samples/_failures_safe/1761422007_be4d5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf1d9004.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_bf1d9004.c:184:9: error: expected ‘,’ or ‘;’ at end of input
  184 |         for (int v = 0
      |         ^~~
./samples/SAFE/__tmp_bf1d9004.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf1d9004.c:184:9: error: expected declaration or statement at end of input
